tests/compilefail78.out
[1mtests/compilefail78.pas:4:13: [0m[1m[91merror:[0m Unterminated character string
     4 | 	writeln('abc);
	
