tests/compilefail78.pas
program compilefail78(output);
{unterminated string constant}
begin
	writeln('abc);
end.
